--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>About Me</title>
+
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
+
 </head>
 <body>
     <h1>William Quinonez</h1>
+    <img src="/Users/will/Desktop/wellinn.github.io/assets/images/IMG_1896.jpg">
 </body>
+    Hi everyone, my name is William Quinonez. 
+    I'm currently looking code in order to further my career and knowlegde in this field. A little bit about myself, i'm recently married over a year ago (happy wife, happy life). 
+    I'm traveler both for business and pleasure. Career wise, I work in the Health Insurance field as a Sales Consultant, so I'm able to meet all walks of life. For pleasure, my wife and I tend to travel locally and abroad to experience different cultures. 
+    My interest consist of world history and american pop culture. 
 </html>
