updated about me

--- a/index.html
+++ b/index.html
@@ -6,15 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Me</title>
 
-    <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 <body>
-    <h1>William Quinonez</h1>
-    <img src="/Users/will/Desktop/wellinn.github.io/assets/images/IMG_1896.jpg">
+    <header id="main-header">
+        <div class="container">
+            <h1>William Quinonez</h1>
+            <img src="/Users/will/Desktop/wellinn.github.io/assets/images/IMG_1896.jpg">
+        </div>
+    </header>
+
+    <section id="main">
+    <div class="container">
+        <h1>
+    </div>
+    </section>
 </body>
-    Hi everyone, my name is William Quinonez. 
-    I'm currently looking code in order to further my career and knowlegde in this field. A little bit about myself, i'm recently married over a year ago (happy wife, happy life). 
-    I'm traveler both for business and pleasure. Career wise, I work in the Health Insurance field as a Sales Consultant, so I'm able to meet all walks of life. For pleasure, my wife and I tend to travel locally and abroad to experience different cultures. 
-    My interest consist of world history and american pop culture. 
+    Hi everyone, my name is William Quinonez. I'm currently looking code in order to further my career and knowlegde in this field. A little bit about myself, i'm recently married over a year ago (happy wife, happy life). I'm traveler both for business and pleasure. Career wise, I work in the Health Insurance field as a Sales Consultant, so I'm able to meet all walks of life. For pleasure, my wife and I tend to travel locally and abroad to experience different cultures. My interest consist of world history and american pop culture. 
+
+<footer>
 </html>
