--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Me</title>
+    <title>Will's Page</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+
+
 </head>
 <body>
-    <header id="main-header">
-        <div class="container">
-            <h1>William Quinonez</h1>
-            <img src="/Users/will/Desktop/wellinn.github.io/assets/images/IMG_1896.jpg">
+    <header
+     <div class="header-wrapper">
+            <h1>
+                <a href="#">William Quinonez</header>
+            <h1>
+            <nav>
+                    <a href="#"> About Me</a>
+                    <a href="portfolio.html">Portfolio</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+           
         </div>
+        <img src="/Users/will/Desktop/wellinn.github.io/assets/images/IMG_1896.jpg">
+
     </header>
 
     <section id="main">
@@ -23,7 +34,9 @@
     </div>
     </section>
 </body>
-    Hi everyone, my name is William Quinonez. I'm currently looking code in order to further my career and knowlegde in this field. A little bit about myself, i'm recently married over a year ago (happy wife, happy life). I'm traveler both for business and pleasure. Career wise, I work in the Health Insurance field as a Sales Consultant, so I'm able to meet all walks of life. For pleasure, my wife and I tend to travel locally and abroad to experience different cultures. My interest consist of world history and american pop culture. 
+    <p>Hi everyone, my name is William Quinonez. I'm currently looking code in order to further my career and knowlegde in this field. A little bit about myself, i'm recently married over a year ago (happy wife, happy life). <br>
+        <br>
+        I'm traveler both for business and pleasure. Career wise, I work in the Health Insurance field as a Sales Consultant, so I'm able to meet all walks of life. For pleasure, my wife and I tend to travel locally and abroad to experience different cultures. My interest consist of world history and american pop culture.
 
 <footer>
 </html>
