--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        <section></section>
             <h1>
                 <a href="#"> William Quinonez<a>
            
@@ -23,7 +24,7 @@
             </nav>
 
             <h1></h1>
-            <img src="/Users/will/Desktop/wellinn.github.io/assets/images/IMG_1896.jpg">
+            <img src="/Users/will/Desktop/wellinn.github.io/assets/images/IMG_1896.jpg" alt="William Quinonez">
         
 </body>
     <h2></h2>
