--- a/portfolio.html
+++ b/portfolio.html
@@ -20,19 +20,24 @@
         <h2>Portfolio</h2>
         <div class="flex-container">    
             <div class="flex-item"></div>
-              <span>Card Title</span>
-            <div>
+              <span>Card 1</span> 
             <div class="flex-item"></div>
                 <span>Card 2</span>
-            <div>
+        <div class="flex-item"></div>
                 <span>Card 3</span>
-            </div>
+        <div class="flex-item"></div>        
                 <span>Card 4</span>
-            <div>
+        <div class="flex-item"></div>
                 <span>Card 5</span>
-            </div>
-
         </div>
+}
     </main>
-</body>
+</body> 
 </html>
+
+<main h2 {
+            color: var(--light-red);
+            padding: 0 10px 20px;
+            border-bottom: 3px solid var(--charcoal);
+
+}
