--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+    * {
+        <box-sizing></box-sizing>
+    }
+
+}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,14 +35,8 @@
         <div class="flex-item"></div>
                 <span>Card 5</span>
         </div>
-}
-    </main>
 </body> 
 </html>
 
-<main h2 {
-            color: var(--light-red);
-            padding: 0 10px 20px;
-            border-bottom: 3px solid var(--charcoal);
 
 }
