--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </header>
 
-    <img src="/Users/will/Desktop/wellinn.github.io/assets/images/IMG_1896.jpg" alt="William Quinonez"
+    <img src="/Users/will/Desktop/wellinn.github.io/assets/images/IMG_1896.jpg" alt="William Quinonez">
            
     <p>
         Hi everyone, my name is William Quinonez. I'm currently looking code in order to further my career and knowlegde in this field. A little bit about myself, i'm recently married over a year ago (happy wife, happy life).
