--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    * {
-        <box-sizing></box-sizing>
-    }
 
-}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,9 +22,11 @@
         <div class="flex-container">    
             <div class="flex-item"></div>
               <span>Card 1</span> 
+        <div class="flex-container">
             <div class="flex-item"></div>
                 <span>Card 2</span>
-        <div class="flex-item"></div>
+        <div class="flex-container">
+            <div class="flex-item"></div>
                 <span>Card 3</span>
         <div class="flex-item"></div>        
                 <span>Card 4</span>
@@ -37,6 +35,3 @@
         </div>
 </body> 
 </html>
-
-
-}
