--- a/index.html
+++ b/index.html
@@ -12,18 +12,14 @@
 
 <body>
     <header>
-        <div class="container">
-            <h1>William Quinonez</h1>
-
-            <nav>
-                <ul>
-                    <a href="#"> About Me</a>
-                    <a href="portfolio.html">Portfolio<a>
-                    <a href="contact.html">Contact</a>
-                </ul>
-            </nav>
-        </div>
-
+            <h1>William Quinonez</h1> 
+        <nav class="nav justify-content-end">
+            <ul>
+                <a class="nav-link about me" href="#"> About Me</a>
+                <a class="nav-link portfolio" href="portfolio.html">Portfolio<a>
+                <a class="nav-link contact" href="contact.html">Contact</a>
+            </ul>
+        </nav>
     </header>
 
     <img src="/Users/will/Desktop/wellinn.github.io/assets/images/IMG_1896.jpg" alt="William Quinonez">
