--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,28 @@
                 <ul>
                     <a href="#"> About Me</a>
                     <a href="portfolio.html">Portfolio<a>
-                            <a href="contact.html">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </ul>
             </nav>
         </div>
     </header>
+
+    <form action="http://www.example.com/login.php">
+        <p>Name
+            <input type="text" name="name" size="230" maxlength="30" />
+        </p>
+    </form>
+
+    <form action="http://www.example.com/login.php">
+        <p> Email
+            <input type="text" email="email" size="230" maxlength="30" />
+        </p> 
+    </form>
+
+    <form action="http://www.example.com/login.php">
+        <p>Message</p>
+        <textarea cols="235" rows="12"> </textarea>
+    </form>
 </body>
 
 </html>
