--- a/index.html
+++ b/index.html
@@ -22,11 +22,16 @@
         </nav>
     </header>
 
-    <img src="/Users/will/Desktop/wellinn.github.io/assets/images/IMG_1896.jpg" alt="William Quinonez">
-           
-    <p>
-        Hi everyone, my name is William Quinonez. I'm currently looking code in order to further my career and knowlegde in this field. A little bit about myself, i'm recently married over a year ago (happy wife, happy life).
-        I'm traveler for business and pleasure. Career wise, I work in the Health Insurance field as a Sales Consultant, so I'm able to meet all walks of life. For pleasure, my wife and I tend to travel locally and abroad to experience different cultures. My general interest consist of world history and american pop culture.
+    <p><img src="/Users/will/Desktop/wellinn.github.io/assets/images/IMG_1896.jpg" alt="William Quinonez" height="200" align="left" />
+        <br>
+        <br>
+        <br>
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis excepturi fuga aperiam, labore inventore doloremque soluta sapiente molestias distinctio officia harum maiores ad ipsum quidem sint architecto modi temporibus ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias illo eligendi quam veritatis sequi, maxime rem tempora ipsum possimus magnam, laborum sunt! Voluptate dolor esse nihil sit obcaecati aliquam hic? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum delectus exercitationem praesentium ullam quo! Atque laborum eveniet labore ab vero ut, beatae nihil illum natus cum ipsum quod sit repellendus.
+    </p>
+    <br>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quia placeat amet tempora rerum, adipisci illum cum, voluptate fuga at eligendi, repellendus non necessitatibus nemo nihil unde laudantium? Eligendi, aperiam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium nobis eaque vitae sapiente itaque neque autem qui, dignissimos omnis tenetur a recusandae, excepturi blanditiis aliquid cumque mollitia cupiditate aut eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem adipisci, architecto fugit aliquid veniam repellendus cupiditate, nisi, deleniti commodi omnis harum facere culpa alias ab ipsum amet nobis reprehenderit aperiam?
     </p>
 
     </img>
