--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,16 @@
 
 </head>
 <body>
+    <header>
+        <h1>William Quinonez</h1>
+            <nav class="nav justify-content-end">
+                <ul>
+                    <a class="nav-link about me" href="#"> About Me</a>
+                    <a class="nav-link portfolio" href="portfolio.html">Portfolio<a>
+                            <a class="nav-link contact" href="contact.html">Contact</a>
+                </ul>
+            </nav>
+        </header>
     <main>
         <h2>Portfolio</h2>
         <div class="flex-container">    
