--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-            <h1>William Quinonez</h1> 
+            <h1 class='Name'>William Quinonez</h1> 
         <nav class="nav justify-content-end">
             <ul>
                 <a class="nav-link about me" href="#"> About Me</a>
@@ -22,18 +22,27 @@
         </nav>
     </header>
 
-    <p><img src="/Users/will/Desktop/wellinn.github.io/assets/images/IMG_1896.jpg" alt="William Quinonez" height="200" align="left" />
-        <br>
-        <br>
-        <br>
 
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis excepturi fuga aperiam, labore inventore doloremque soluta sapiente molestias distinctio officia harum maiores ad ipsum quidem sint architecto modi temporibus ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias illo eligendi quam veritatis sequi, maxime rem tempora ipsum possimus magnam, laborum sunt! Voluptate dolor esse nihil sit obcaecati aliquam hic? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum delectus exercitationem praesentium ullam quo! Atque laborum eveniet labore ab vero ut, beatae nihil illum natus cum ipsum quod sit repellendus.
-    </p>
-    <br>
-    <br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quia placeat amet tempora rerum, adipisci illum cum, voluptate fuga at eligendi, repellendus non necessitatibus nemo nihil unde laudantium? Eligendi, aperiam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium nobis eaque vitae sapiente itaque neque autem qui, dignissimos omnis tenetur a recusandae, excepturi blanditiis aliquid cumque mollitia cupiditate aut eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem adipisci, architecto fugit aliquid veniam repellendus cupiditate, nisi, deleniti commodi omnis harum facere culpa alias ab ipsum amet nobis reprehenderit aperiam?
-    </p>
+<hr /> 
+    <div class='topSection'>
+        <h2>About Me</h2>
+        <img class='profilePic' src="/Users/will/Desktop/wellinn.github.io/assets/images/IMG_1896.jpg" alt="William Quinonez" height="170" />
 
-    </img>
+        <p style="line-height: 1.8; font-size: medium;">
+            <br>
+               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis excepturi fuga aperiam, labore inventore doloremque soluta sapiente molestias distinctio officia harum maiores ad ipsum quidem sint architecto modi temporibus ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        </p>
+
+                
+        <p style="line-height: 1.8;">
+           <br>
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero odit ipsam earum optio molestiae itaque aspernatur minus officiis beatae animi, consectetur voluptate natus iusto dolorem, laudantium quis totam, nisi vel?
+        </p>
+
+        <p style="line-height: 1.8;">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero odit ipsam earum optio molestiae itaque aspernatur
+            minus officiis beatae animi, consectetur voluptate natus iusto dolorem, laudantium quis totam, nisi vel?
+        </p>
+    </div>
 <footer>
 </html>
